--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kilian Bogus - YouTube-Kanal</title>
-    <!-- Verlinkung zur CSS-Datei -->
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
+    <link rel="shortcut icon" href="">
 </head>
 <body>
     <!-- Navigation -->
@@ -44,23 +45,34 @@
     </section>
     -->
 
-    <!-- Kontakt -->
     <section id="contact">
-        <h2>Kontakt</h2>
-        <p>Kontaktiere mich für Anfragen und Kooperationen.</p>
-        <form action="#">
-            <input type="text" placeholder="Dein Name" required>
-            <input type="email" placeholder="Deine E-Mail" required>
-            <textarea placeholder="Deine Nachricht" required></textarea>
-            <button type="submit">Absenden</button>
-        </form>
+        <div class="contact-container">
+            <h2>Contact Us</h2>
+            <form id="contact-form" action="assets/javascript/php/send_email.php" method="POST">
+                <label for="name">Name<span>*</span>:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="last-name">Last Name<span>*</span>:</label>
+                <input type="text" id="last-name" name="last-name" required>
+                <label for="email">E-mail<span>*</span>:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="subject">Subject<span>*</span>:</label>
+                <input type="text" id="subject" name="subject" required>
+                <label for="telephone">Telephone Number:</label>
+                <input type="tel" id="telephone" name="telephone">
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="10"></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
     </section>
 
     <!-- Footer -->
+     <br>
+     <br>
     <footer>
         <p>&copy; 2024 Kilian Bogus. Alle Rechte vorbehalten.</p>
-        <!-- Link zu deinem YouTube-Kanal -->
         <p><a href="https://www.youtube.com/channel/UCPJb1XOOcTvnXZdR2mlKOAQ" target="_blank" style="color: lightseagreen;">Besuche meinen YouTube-Kanal</a></p>
     </footer>
+    <script src="assets/javascript/contact.js"></script>
 </body>
 </html>
