--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Kilian Bogus - YouTube-Kanal</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/contact.css">
-    <link rel="shortcut icon" href="">
+    <link rel="stylesheet" href="assets/css/projects.css">
+    <link rel="shortcut icon" href="assets/content/tab_icon.jpg">
 </head>
 <body>
     <!-- Navigation -->
@@ -16,6 +17,7 @@
             <ul>
                 <li><a href="#home">Startseite</a></li>
                 <li><a href="#about">Über mich</a></li>
+                <li><a href="#projects">Projekte</a></li>
                 <li><a href="#videos">Videos</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Kontakt</a></li>
@@ -35,40 +37,42 @@
         <p>Hier kannst du etwas über mich erfahren und warum ich diesen Kanal betreibe.</p>
     </section>
 
-    <!--
-    <section id="videos">
-        <h2>Videos</h2>
-        <p>Hier findest du meine neuesten Videos zu 3D-Druck, Coding und Gaming.</p>
-        <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <section id="projects">
+        <h2>GitHub-Projekte</h2>
+        <p>Hier findest du eine Auswahl meiner GitHub-Projekte:</p>
+        <div class="project">
+            <h3>Meine Webseite</h3>
+            <a href="https://github.com/KilianB1399/Webseite"><img src="assets/content/preview_website.png" class="project-preview-image"></a>
+            <br>
+            <p>Beschreibung muss hier noch geschreiben werden</p>
+            <a href="https://github.com/KilianB1399/Webseite" style="color: lightseagreen;">Link zum Projekt</a>
         </div>
     </section>
-    -->
 
     <section id="contact">
         <div class="contact-container">
-            <h2>Contact Us</h2>
-            <form id="contact-form" action="assets/javascript/php/send_email.php" method="POST">
+            <h2>Kontakt</h2>
+            <form id="contact-form" onsubmit="submitForm(); return false;">
                 <label for="name">Name<span>*</span>:</label>
                 <input type="text" id="name" name="name" required>
-                <label for="last-name">Last Name<span>*</span>:</label>
+                <label for="last-name">Nachname<span>*</span>:</label>
                 <input type="text" id="last-name" name="last-name" required>
-                <label for="email">E-mail<span>*</span>:</label>
+                <label for="email">E-Mail<span>*</span>:</label>
                 <input type="email" id="email" name="email" required>
-                <label for="subject">Subject<span>*</span>:</label>
+                <label for="subject">Betreff<span>*</span>:</label>
                 <input type="text" id="subject" name="subject" required>
-                <label for="telephone">Telephone Number:</label>
+                <label for="telephone">Telefonnummer:</label>
                 <input type="tel" id="telephone" name="telephone">
-                <label for="message">Message:</label>
+                <label for="message">Nachricht:</label>
                 <textarea id="message" name="message" rows="10"></textarea>
-                <button type="submit">Submit</button>
+                <button type="submit">Absenden</button>
             </form>
         </div>
     </section>
 
     <!-- Footer -->
-     <br>
-     <br>
+    <br>
+    <br>
     <footer>
         <p>&copy; 2024 Kilian Bogus. Alle Rechte vorbehalten.</p>
         <p><a href="https://www.youtube.com/channel/UCPJb1XOOcTvnXZdR2mlKOAQ" target="_blank" style="color: lightseagreen;">Besuche meinen YouTube-Kanal</a></p>
