--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="shortcut icon" href="assets/content/tab_icon.jpg">
 </head>
 <body>
-    <!-- Navigation -->
     <header>
         <nav>
             <ul>
@@ -42,6 +41,13 @@
         <p>Hier findest du eine Auswahl meiner GitHub-Projekte:</p>
         <div class="project">
             <h3>Meine Webseite</h3>
+            <a href="https://github.com/KilianB1399/Webseite"><img src="assets/content/preview_website.png" class="project-preview-image"></a>
+            <br>
+            <p>Beschreibung muss hier noch geschreiben werden</p>
+            <a href="https://github.com/KilianB1399/Webseite" style="color: lightseagreen;">Link zum Projekt</a>
+        </div>
+        <div class="project">
+            <h3>Python Anti AFK</h3>
             <a href="https://github.com/KilianB1399/Webseite"><img src="assets/content/preview_website.png" class="project-preview-image"></a>
             <br>
             <p>Beschreibung muss hier noch geschreiben werden</p>
