--- a/index.html
+++ b/index.html
@@ -4,38 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kilian Bogus - YouTube-Kanal</title>
+    <title>KilianB.</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/contact.css">
     <link rel="stylesheet" href="assets/css/projects.css">
+    <link rel="stylesheet" href="assets/css/social-media.css">
     <link rel="shortcut icon" href="assets/content/tab_icon.jpg">
 </head>
 <body>
+    <!-- navbar -->
     <header>
         <nav>
             <ul>
                 <li><a href="#home">Startseite</a></li>
                 <li><a href="#about">Über mich</a></li>
+                <li><a href="#social-media">Social Media</a></li>
                 <li><a href="#projects">Projekte</a></li>
                 <li><a href="#videos">Videos</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Kontakt</a></li>
-                <li><a href="https://impressum.bbd-8.org/">Impressum</a></li>
-                <li><a href="https://tos.bbd-8.org/">Datenschutz</a></li>
             </ul>
         </nav>
     </header>
-
+    <!-- main -->
     <section id="home">
         <h1>Willkommen auf meiner Webseite!</h1>
         <p>Hier geht es um 3D-Druck, Coding und Gaming!</p>
     </section>
-
     <section id="about">
         <h2>Über mich</h2>
         <p>Hier kannst du etwas über mich erfahren und warum ich diesen Kanal betreibe.</p>
     </section>
-
+    <section id="social-media">
+        <h2>Social Media</h2>
+        <div class="social-media">
+            <div class="social-media-preview">
+                <h3>YouTube</h3>
+                <img src="https://yt3.googleusercontent.com/VhhBYqbsu4U--VBnpktxyxtnJUWLaGmlOm0aQpXTVzth1ezdWp5BVgDcMWFXTImHrv1sqRYk=s160-c-k-c0x00ffffff-no-rj" class="social-media-image">
+                <a href="https://www.youtube.com/channel/UCPJb1XOOcTvnXZdR2mlKOAQ" style="color: black;">Schaue auf meinem YouTube-Kanal vorbei</a>
+            </div>
+            <div class="social-media-preview">
+                <h3>Twitch</h3>
+                <img src="https://yt3.googleusercontent.com/VhhBYqbsu4U--VBnpktxyxtnJUWLaGmlOm0aQpXTVzth1ezdWp5BVgDcMWFXTImHrv1sqRYk=s160-c-k-c0x00ffffff-no-rj" class="social-media-image">
+                <a href="https://www.twitch.tv/kilianb1399" style="color: black;">Schaue auf meinem Twitch-Kanal vorbei</a>
+            </div>
+            <div class="social-media-preview">
+                <h3>Thingiverse</h3>
+                <img src="https://yt3.googleusercontent.com/VhhBYqbsu4U--VBnpktxyxtnJUWLaGmlOm0aQpXTVzth1ezdWp5BVgDcMWFXTImHrv1sqRYk=s160-c-k-c0x00ffffff-no-rj" class="social-media-image">
+                <a href="https://www.thingiverse.com/kilianb/designs" style="color: black;">Schaue auf meinem Thingiverse-Konto vorbei</a>
+            </div>
+        </div>
+    </section>
     <section id="projects">
         <h2>GitHub-Projekte</h2>
         <p>Hier findest du eine Auswahl meiner GitHub-Projekte:</p>
@@ -48,13 +67,12 @@
         </div>
         <div class="project">
             <h3>Python Anti AFK</h3>
-            <a href="https://github.com/KilianB1399/Webseite"><img src="assets/content/preview_website.png" class="project-preview-image"></a>
+            <a href="https://github.com/KilianB1399/Webseite"><img src="assets/content/preview-anti-afk.png" class="project-preview-image"></a>
             <br>
             <p>Beschreibung muss hier noch geschreiben werden</p>
-            <a href="https://github.com/KilianB1399/Webseite" style="color: lightseagreen;">Link zum Projekt</a>
+            <a href="https://github.com/KilianB1399/Anti-AFK" style="color: lightseagreen;">Link zum Projekt</a>
         </div>
     </section>
-
     <section id="contact">
         <div class="contact-container">
             <h2>Kontakt</h2>
@@ -75,13 +93,14 @@
             </form>
         </div>
     </section>
-
-    <!-- Footer -->
+    <!-- footer -->
     <br>
     <br>
     <footer>
         <p>&copy; 2024 Kilian Bogus. Alle Rechte vorbehalten.</p>
-        <p><a href="https://www.youtube.com/channel/UCPJb1XOOcTvnXZdR2mlKOAQ" target="_blank" style="color: lightseagreen;">Besuche meinen YouTube-Kanal</a></p>
+        <a href="https://impressum.bbd-8.org/" style="color: white;">Impressum</a>
+        <a href="https://tos.bbd-8.org/" style="color: white;">Datenschutz</a>
+        <a href="https://www.youtube.com/channel/UCPJb1XOOcTvnXZdR2mlKOAQ" style="color: lightseagreen;">Besuche meinen YouTube-Kanal</a>
     </footer>
     <script src="assets/javascript/contact.js"></script>
 </body>
