--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/contact.css">
     <link rel="stylesheet" href="assets/css/projects.css">
     <link rel="stylesheet" href="assets/css/social-media.css">
+    <link rel="stylesheet" href="assets/css/map.css">
     <link rel="shortcut icon" href="assets/content/tab_icon.jpg">
 </head>
 <body>
@@ -74,23 +75,58 @@
         </div>
     </section>
     <section id="contact">
-        <div class="contact-container">
-            <h2>Kontakt</h2>
-            <form id="contact-form" onsubmit="submitForm(); return false;">
-                <label for="name">Name<span>*</span>:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="last-name">Nachname<span>*</span>:</label>
-                <input type="text" id="last-name" name="last-name" required>
-                <label for="email">E-Mail<span>*</span>:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="subject">Betreff<span>*</span>:</label>
-                <input type="text" id="subject" name="subject" required>
-                <label for="telephone">Telefonnummer:</label>
-                <input type="tel" id="telephone" name="telephone">
-                <label for="message">Nachricht:</label>
-                <textarea id="message" name="message" rows="10"></textarea>
-                <button type="submit">Absenden</button>
-            </form>
+        <div class="contact-map-wrapper">
+            <div class="contact-container">
+                <h2>Kontakt</h2>
+                <form id="contact-form" onsubmit="submitForm(); return false;">
+                    <label for="name">Name<span>*</span>:</label>
+                    <input type="text" id="name" name="name" required>
+                    <label for="last-name">Nachname<span>*</span>:</label>
+                    <input type="text" id="last-name" name="last-name" required>
+                    <label for="email">E-Mail<span>*</span>:</label>
+                    <input type="email" id="email" name="email" required>
+                    <label for="subject">Betreff<span>*</span>:</label>
+                    <input type="text" id="subject" name="subject" required>
+                    <label for="telephone">Telefonnummer:</label>
+                    <input type="tel" id="telephone" name="telephone">
+                    <label for="message">Nachricht:</label>
+                    <textarea id="message" name="message" rows="10"></textarea>
+                    <button type="submit">Absenden</button>
+                </form>
+            </div>
+            <div class="map-container">
+                <div class="map-background">
+                    <div class="map">
+                        <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2372.355050735638!2d8.490934316067832!3d53.18379277993098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b73d9c27d5801d%3A0xb79ebf02f4aa2866!2sBettingb%C3%BChrener%20Dorfstra%C3%9Fe%208%2C%2027804%20Berne%2C%20Germany!5e0!3m2!1sen!2sus!4v1686731259835!5m2!1sen!2sus" 
+                        allowfullscreen="" 
+                        loading="lazy">
+                        </iframe>
+                    </div>
+                    <h1>Get in Touch</h1>
+                    <div class="contact-info">
+                        <p><strong>Phone:</strong> <a href="tel:+491736342952">0173 6342952</a></p>
+                        <p><strong>Email:</strong> <a href="mailto:kilianbogus@bbd-8.org">kilianbogus@bbd-8.org</a></p>
+                    </div>
+                    <h2>Location</h2>
+                    <div class="location-info">
+                        <p>Bettingbührener Dorfstraße 8<br>
+                            Berne, Niedersachsen 27804 DE</p>
+                    </div>
+                    <h2>Hours</h2>
+                    <div class="hours">
+                        <table>
+                            <tr><td>Monday:</td><td>9:00am – 10:00pm</td></tr>
+                            <tr><td>Tuesday:</td><td>9:00am – 10:00pm</td></tr>
+                            <tr><td>Wednesday:</td><td>9:00am – 10:00pm</td></tr>
+                            <tr><td>Thursday:</td><td>9:00am – 10:00pm</td></tr>
+                            <tr><td>Friday:</td><td>9:00am – 10:00pm</td></tr>
+                            <tr><td>Saturday:</td><td>9:00am – 6:00pm</td></tr>
+                            <tr><td>Sunday:</td><td>9:00am – 12:00pm</td></tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- footer -->
@@ -100,6 +136,7 @@
         <p>&copy; 2024 Kilian Bogus. Alle Rechte vorbehalten.</p>
         <a href="https://impressum.bbd-8.org/" style="color: white;">Impressum</a>
         <a href="https://tos.bbd-8.org/" style="color: white;">Datenschutz</a>
+        <br>
         <a href="https://www.youtube.com/channel/UCPJb1XOOcTvnXZdR2mlKOAQ" style="color: lightseagreen;">Besuche meinen YouTube-Kanal</a>
     </footer>
     <script src="assets/javascript/contact.js"></script>
