--- a/index.html
+++ b/index.html
@@ -41,18 +41,23 @@
         <div class="social-media">
             <div class="social-media-preview">
                 <h3>YouTube</h3>
-                <img src="https://yt3.googleusercontent.com/VhhBYqbsu4U--VBnpktxyxtnJUWLaGmlOm0aQpXTVzth1ezdWp5BVgDcMWFXTImHrv1sqRYk=s160-c-k-c0x00ffffff-no-rj" class="social-media-image">
-                <a href="https://www.youtube.com/channel/UCPJb1XOOcTvnXZdR2mlKOAQ" style="color: black;">Schaue auf meinem YouTube-Kanal vorbei</a>
+                <img src="https://static.vecteezy.com/system/resources/previews/023/986/480/non_2x/youtube-logo-youtube-logo-transparent-youtube-icon-transparent-free-free-png.png" class="social-media-image">
+                <a href="https://www.youtube.com/channel/UCPJb1XOOcTvnXZdR2mlKOAQ" style="color: black;">Meinem YouTube-Kanal</a>
             </div>
             <div class="social-media-preview">
                 <h3>Twitch</h3>
-                <img src="https://yt3.googleusercontent.com/VhhBYqbsu4U--VBnpktxyxtnJUWLaGmlOm0aQpXTVzth1ezdWp5BVgDcMWFXTImHrv1sqRYk=s160-c-k-c0x00ffffff-no-rj" class="social-media-image">
-                <a href="https://www.twitch.tv/kilianb1399" style="color: black;">Schaue auf meinem Twitch-Kanal vorbei</a>
+                <img src="https://f.media-amazon.com/images/I/21kRx-CJsUL.png" class="social-media-image">
+                <a href="https://www.twitch.tv/kilianb1399" style="color: black;">Meinem Twitch-Kanal</a>
             </div>
             <div class="social-media-preview">
                 <h3>Thingiverse</h3>
-                <img src="https://yt3.googleusercontent.com/VhhBYqbsu4U--VBnpktxyxtnJUWLaGmlOm0aQpXTVzth1ezdWp5BVgDcMWFXTImHrv1sqRYk=s160-c-k-c0x00ffffff-no-rj" class="social-media-image">
-                <a href="https://www.thingiverse.com/kilianb/designs" style="color: black;">Schaue auf meinem Thingiverse-Konto vorbei</a>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/9b/Thingiverse_Logo_192x192.png" class="social-media-image">
+                <a href="https://www.thingiverse.com/kilianb/designs" style="color: black;">Meinem Thingiverse-Konto</a>
+            </div>
+            <div class="social-media-preview">
+                <h3>Thingiverse</h3>
+                <img src="assets/content/preview_makerworld_accountlinks.png" class="social-media-image">
+                <a href="https://makerworld.com/en/@kilianb." style="color: black;">Meinem Makerworld-Profil</a>
             </div>
         </div>
     </section>
@@ -132,12 +137,11 @@
     <!-- footer -->
     <br>
     <br>
+    <br>
     <footer>
         <p>&copy; 2024 Kilian Bogus. Alle Rechte vorbehalten.</p>
         <a href="https://impressum.bbd-8.org/" style="color: white;">Impressum</a>
         <a href="https://tos.bbd-8.org/" style="color: white;">Datenschutz</a>
-        <br>
-        <a href="https://www.youtube.com/channel/UCPJb1XOOcTvnXZdR2mlKOAQ" style="color: lightseagreen;">Besuche meinen YouTube-Kanal</a>
     </footer>
     <script src="assets/javascript/contact.js"></script>
 </body>
