--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a href="https://www.thingiverse.com/kilianb/designs" style="color: black;">Meinem Thingiverse-Konto</a>
             </div>
             <div class="social-media-preview">
-                <h3>Thingiverse</h3>
+                <h3>Makerworld</h3>
                 <img src="assets/content/preview_makerworld_accountlinks.png" class="social-media-image">
                 <a href="https://makerworld.com/en/@kilianb." style="color: black;">Meinem Makerworld-Profil</a>
             </div>
@@ -94,7 +94,7 @@
                     <input type="text" id="subject" name="subject" required>
                     <label for="telephone">Telefonnummer:</label>
                     <input type="tel" id="telephone" name="telephone">
-                    <label for="message">Nachricht:</label>
+                    <label for="message">Nachricht<span>*</span>:</label>
                     <textarea id="message" name="message" rows="10"></textarea>
                     <button type="submit">Absenden</button>
                 </form>
